Three-element tooltip to avoid tiny gap

--- a/web/common.css
+++ b/web/common.css
@@ -1,7 +1,7 @@
 @font-face {font-family: 'Helvetica Neue'; src: url(fonts/HelveticaNeueLight.ttf)}
 html {font-family: 'Helvetica Neue', Arial, sans-serif; font-size: 10pt}
 
-:root {--bg-color:rgba(0, 0, 50, 0.75)};
+:root {--bg-color:rgb(0, 0, 50); --border-color:var(--bg-color) transparent transparent transparent};
 .hidden {visibility:hidden}
 
 .boxContainer {display:block; position:relative; top:10px; margin:0 auto; background-color:white}
@@ -21,9 +21,12 @@ html {font-family: 'Helvetica Neue', Arial, sans-serif; font-size: 10pt}
 .titleDayLabel {font-size:1.2em}
 .otherMonth {color:#aaa}
 .charge {display:block; position:absolute; width:100%}
-.charge .tooltip {opacity:0; position:absolute; display:block; left:50%; bottom:100%; width:40px; height:20px; line-height:20px; margin-left:-20px; margin-bottom:5px; background-color:var(--bg-color); color:white; font-weight:500; text-align:center; border-radius:5px; z-index:110}
-.charge .tooltip:after {content:''; position:absolute; left:50%; top:100%; margin-left:-5px; box-sizing:border-box; border:5px solid; border-color:var(--bg-color) transparent transparent transparent}
-.charge:hover .tooltip {opacity:1.0; transition: all 0.18s linear}
+.charge .tooltip .label, .charge .tooltip .backdrop {opacity:0; position:absolute; display:block; left:50%; bottom:100%; width:40px; height:20px; margin-left:-20px; margin-bottom:5px; box-sizing:border-box}
+.charge .tooltip .label {color:white; line-height:20px; font-weight:500; text-align:center; text-align:center; border-radius:5px; z-index:110}
+.charge .tooltip .backdrop {background-color:var(--bg-color); border-radius:5px}
+.charge .tooltip .backdrop:after {content:''; position:absolute; left:50%; top:95%; margin-left:-6px; box-sizing:border-box; border:6px solid; border-color:var(--border-color)}
+.charge:hover .tooltip .label {opacity:1.0; transition: all 0.18s linear}
+.charge:hover .tooltip .backdrop {opacity:0.75; transition: all 0.18s linear}
 .used {background-color:#ddd}
 .added {background-color:#7ff}
 .addedUsed {background-color:#4f2}
